--- a/gallery-styles.css
+++ b/gallery-styles.css
@@ -5,6 +5,8 @@
     justify-content: center;
     padding-bottom: 150px;
     box-shadow: 1px 4px 4px #EAEAEA;
+    margin-top: 40px;
+    
 }
 
 .gallery__box {
@@ -13,6 +15,7 @@
     align-items: center;
     transition: all 1s ease-in-out;
     cursor: pointer;
+    width: 300px;
 }
 
 .gallery__box:hover {
